--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
+    "form-data": "^4.0.0",
     "helmet": "^6.0.1",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.1",
     "jwks-rsa": "^3.0.1",
+    "mailgun.js": "^10.2.1",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.6",
     "nodemailer": "^6.9.1",
