--- a/vet-app/package.json
+++ b/vet-app/package.json
@@ -25,7 +25,9 @@
     "rc-tween-one": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-icons": "^4.10.1",
+    "react-player": "^2.15.1",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
