--- a/vet-app/package.json
+++ b/vet-app/package.json
@@ -6,6 +6,10 @@
     "@ant-design/colors": "^7.0.0",
     "@ant-design/icons": "^4.8.0",
     "@auth0/auth0-react": "^1.12.0",
+    "@fullcalendar/daygrid": "^5.9.0",
+    "@fullcalendar/interaction": "^5.9.0",
+    "@fullcalendar/react": "^5.9.0",
+    "@fullcalendar/timegrid": "^5.9.0",
     "@redux-devtools/extension": "^3.2.3",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/jest": "^29.2.3",
