--- a/vet-app/package.json
+++ b/vet-app/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^18.11.9",
     "@types/react-dom": "^18.0.8",
     "antd": "^5.0.0",
+    "apexcharts": "^3.49.0",
     "atatus-spa": "^4.6.0",
     "axios": "^1.2.0",
     "country-state-city": "^3.2.1",
@@ -27,6 +28,7 @@
     "rc-texty": "^0.2.0",
     "rc-tween-one": "^3.0.6",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-helmet-async": "^2.0.4",
